# docs/swagger.json
@@ -9,6 +9,81 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/target-schema": {
+            "get": {
+                "description": "Get lists of Target Schemas",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "target-schema"
+                ],
+                "summary": "Get Target Schemas",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.TargetSchemaSwagger"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailedOperation"
+                        }
+                    }
+                }
+            }
+        },
+        "/target-schema/test-tree": {
+            "post": {
+                "description": "Test Target Schema Decision Tree output with Cant and AmountTotal",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "target-schema"
+                ],
+                "summary": "Test Target Schema Decision Tree",
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "DecisionTreeInputs",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.DecisionTreeInputs"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SucessfullOperation"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailedOperation"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailedOperation"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "get": {
                 "description": "Get lists of users",
@@ -95,6 +170,17 @@
                 }
             }
         },
+        "models.DecisionTreeInputs": {
+            "type": "object",
+            "properties": {
+                "amountTotal": {
+                    "type": "number"
+                },
+                "cant": {
+                    "type": "number"
+                }
+            }
+        },
         "models.FailedOperation": {
             "type": "object",
             "properties": {
@@ -112,6 +198,72 @@
                 "message": {
                     "type": "string"
                 }
+            }
+        },
+        "models.TargetParams": {
+            "type": "object",
+            "properties": {
+                "max": {
+                    "type": "integer"
+                },
+                "rate": {
+                    "type": "number"
+                }
+            }
+        },
+        "models.TargetSchemaSwagger": {
+            "type": "object",
+            "properties": {
+                "desicionTree": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Tree"
+                    }
+                },
+                "frequent": {
+                    "$ref": "#/definitions/models.TargetParams"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "new": {
+                    "$ref": "#/definitions/models.TargetParams"
+                },
+                "premium": {
+                    "$ref": "#/definitions/models.TargetParams"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Tree": {
+            "type": "object",
+            "properties": {
+                "content": {},
+                "headers": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "key": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "operator": {
+                    "type": "string"
+                },
+                "order": {
+                    "type": "integer"
+                },
+                "parentId": {
+                    "type": "integer"
+                },
+                "value": {}
             }
         },
         "models.User": {
